feat: implement CLI authentication and profile management views